; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_mos_leak_vdev_top_zap.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_mos_leak_vdev_top_zap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@VDEV_TOP_ZAP_MS_UNFLUSHED_PHYS_TXGS = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @mos_leak_vdev_top_zap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mos_leak_vdev_top_zap(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @spa_meta_objset(i32 %7)
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @VDEV_TOP_ZAP_MS_UNFLUSHED_PHYS_TXGS, align 4
  %13 = call i32 @zap_lookup(i32 %8, i32 %11, i32 %12, i32 4, i32 1, i32* %3)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @ENOENT, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  br label %23

18:                                               ; preds = %1
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @ASSERT0(i32 %19)
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @mos_obj_refd(i32 %21)
  br label %23

23:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @zap_lookup(i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @spa_meta_objset(i32) #1

declare dso_local i32 @ASSERT0(i32) #1

declare dso_local i32 @mos_obj_refd(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
